--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "engines": {
+    "node": "14.x"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
