--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.11.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.4",
     "multer": "^2.0.2",
     "node-cron": "^3.0.3",
     "openai": "^4.38.5"
